# lms-backend

./: basic_frontend.html  js_python_demo.md  out.md  pyproject.toml  run.py  smart-lms-aad55-firebase-adminsdk-9jorz-d1598512f8.json
app/: .env  async_content_generation.py  config.py  credentials.json  db.py  firestore.py  main.py  manual_generation.py  models.py  system_prompts.py  utils.py
app/db/: __init__.py  notes_db.py  quiz_db.py
app/models/: __init__.py
app/prompts/: generate_json  generate_material  generate_quiz  generate_syllabus
app/routes/: __init__.py  general.py  generate_routes.py  quiz.py  subjective.py  update_quiz.py
