[tool.poetry]
name = "lms-backend"
version = "0.1.0"
description = ""
authors = ["Yash"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.0"}
openai = "^1.13.3"
python-dotenv = "^1.0.1"
markdown-to-json = "^2.1.0"
rich = "^13.7.1"
firebase-admin = "^6.5.0"
firestore = "^0.0.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
